syntax = "proto3";

package golem.component;

import "golem/component/function_parameter.proto";
import "golem/component/function_result.proto";

message ExportFunction {
  string name = 1;
  repeated FunctionParameter parameters = 2;
  repeated FunctionResult results = 3;
}
