syntax = "proto3";

package golem.component;

import "golem/component/export_function.proto";

message ExportInstance {
  string name = 1;
  repeated ExportFunction functions = 2;
}
