syntax = "proto3";

package golem.component;

import "golem/component/versioned_name.proto";

message ProducerField {
  string name = 1;
  repeated VersionedName values = 2;
}
