syntax = "proto3";

package golem.template;

import "wasm/rpc/type.proto";

message FunctionParameter {
  string name = 1;
  wasm.rpc.Type tpe = 2;
}
