syntax = "proto3";

import "golem/template/template_id.proto";

package golem.template;


message VersionedTemplateId {
  TemplateId template_id = 1;
  uint64 version = 2;
}
